fix: footer nav

--- a/03_Forms/index.html
+++ b/03_Forms/index.html
@@ -78,8 +78,8 @@
               <p>
                 Aquí va el URL que procesa el formulario. <br />
                 Este valor puede ser sobreescrito con un atributo
-                <code>formaction</code> en un elemento
-                <code>&lt;button&gt;</code>, o
+                <code>formaction</code> en un
+                elemento<code>&lt;button&gt;</code>, o
                 <code>&lt;input type="image">&gt;</code>.
               </p>
             </div>
@@ -129,7 +129,9 @@
             </div>
           </section>
         </article>
+
         <hr />
+
         <article id="label">
           <header>
             <h3>&lt;label&gt;</h3>
@@ -167,7 +169,9 @@
             </div>
           </section>
         </article>
+
         <hr />
+
         <article id="input">
           <header>
             <h3>&lt;input&gt;</h3>
@@ -303,7 +307,9 @@
             </div>
           </section>
         </article>
+
         <hr />
+
         <article id="textarea">
           <header>
             <h3>&lt;textarea&gt;</h3>
@@ -330,7 +336,9 @@
             </div>
           </section>
         </article>
+
         <hr />
+
         <article id="select">
           <header>
             <h3>&lt;select&gt;</h3>
@@ -342,7 +350,9 @@
             </p>
           </div>
         </article>
+
         <hr />
+
         <article id="option">
           <header>
             <h3>&lt;option&gt;</h3>
@@ -379,6 +389,7 @@
           </section>
         </article>
 
+        <hr />
         <article id="button">
           <header>
             <h3>&lt;button&gt;</h3>
@@ -394,7 +405,9 @@
           </div>
         </article>
       </section>
+
       <hr />
+
       <section>
         <header>
           <h2 id="formulario">Formulario Prueba</h2>
@@ -458,7 +471,15 @@
     <footer>
       <section>
         <h5>Contacto</h5>
-        <a href="mailto:toledorusso@outlook.com">toledorusso@outlook.com</a>
+        <nav>
+          <ul>
+            <li>
+              <a href="mailto:toledorusso@outlook.com"
+                >toledorusso@outlook.com</a
+              >
+            </li>
+          </ul>
+        </nav>
         <p>Luis Angel Toledo Russo</p>
       </section>
     </footer>
